cmake_minimum_required(VERSION 3.22)

# ── Toolchain (must be set before project()) ────────────────────────────────
set(CMAKE_TOOLCHAIN_FILE ${CMAKE_SOURCE_DIR}/cmake/gcc-arm-none-eabi.cmake)

# ── Project ──────────────────────────────────────────────────────────────────
project(STM32-Maze-Car C CXX ASM)

set(CMAKE_C_STANDARD    11)
set(CMAKE_CXX_STANDARD  14)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

# ── Target MCU ───────────────────────────────────────────────────────────────
set(MCU_FAMILY   STM32F1xx)
set(MCU_MODEL    STM32F103xE)    # VET6 = high-density (512 KB Flash)
set(CPU_FLAGS    "-mcpu=cortex-m3 -mthumb")

# ── Compile-time definitions ─────────────────────────────────────────────────
add_compile_definitions(
    USE_HAL_DRIVER
    ${MCU_MODEL}
)

# ── Common compiler flags ────────────────────────────────────────────────────
set(COMMON_FLAGS "${CPU_FLAGS} -Wall -Wextra -fdata-sections -ffunction-sections")
set(CMAKE_C_FLAGS           "${COMMON_FLAGS} -std=gnu11")
set(CMAKE_CXX_FLAGS         "${COMMON_FLAGS} -std=gnu++14")
set(CMAKE_ASM_FLAGS         "${CPU_FLAGS} -x assembler-with-cpp")

set(CMAKE_C_FLAGS_DEBUG     "-Og -g3 -gdwarf-2")
set(CMAKE_C_FLAGS_RELEASE   "-Os -DNDEBUG")

# ── Sources ───────────────────────────────────────────────────────────────────
file(GLOB_RECURSE CORE_SOURCES     "Core/Src/*.c")
file(GLOB_RECURSE APP_SOURCES      "App/Src/*.c")
file(GLOB_RECURSE DRIVER_SOURCES   "Drivers/STM32F1xx_HAL_Driver/Src/*.c")

# Exclude template files generated by CubeMX
list(FILTER DRIVER_SOURCES EXCLUDE REGEX ".*_template\\.c$")

set(STARTUP_FILE Startup/startup_stm32f103vetx.s)

# ── Include directories ───────────────────────────────────────────────────────
include_directories(
    Core/Inc
    App/Inc
    Drivers/CMSIS/Device/ST/STM32F1xx/Include
    Drivers/CMSIS/Include
    Drivers/STM32F1xx_HAL_Driver/Inc
    Drivers/STM32F1xx_HAL_Driver/Inc/Legacy
)

# ── Linker script ─────────────────────────────────────────────────────────────
set(LINKER_SCRIPT ${CMAKE_SOURCE_DIR}/STM32F103VETx_FLASH.ld)

set(CMAKE_EXE_LINKER_FLAGS
    "${CPU_FLAGS} -specs=nano.specs -T${LINKER_SCRIPT} -lc -lm -lnosys \
    -Wl,-Map=${PROJECT_NAME}.map,--cref -Wl,--gc-sections")

# ── Executable ────────────────────────────────────────────────────────────────
add_executable(${PROJECT_NAME}.elf
    ${CORE_SOURCES}
    ${APP_SOURCES}
    ${DRIVER_SOURCES}
    ${STARTUP_FILE}
)

# ── Post-build: generate .hex / .bin and print size ──────────────────────────
add_custom_command(TARGET ${PROJECT_NAME}.elf POST_BUILD
    COMMAND ${CMAKE_OBJCOPY} -O ihex   $<TARGET_FILE:${PROJECT_NAME}.elf> ${PROJECT_NAME}.hex
    COMMAND ${CMAKE_OBJCOPY} -O binary $<TARGET_FILE:${PROJECT_NAME}.elf> ${PROJECT_NAME}.bin
    COMMAND ${CMAKE_SIZE}    --format=berkeley $<TARGET_FILE:${PROJECT_NAME}.elf>
    COMMENT "Generating ${PROJECT_NAME}.hex / .bin"
)
